# our-finances

./: .gitattributes  .gitignore  .prettierignore  Code.gs  Makefile  README.md  a.sh  appsscript.json  codecheck.sh  database_keys.py  do_it_all.sh  echo  layout.md  makefile  process_file.py  pyproject.toml  queries.sql  requirements.txt  source-setup-development-environment.sh
config/: accounts.toml  accounts.yaml  categories.toml  categories.yaml
data/raw/: field_registry_prefix.py  spreadsheet_fields_prefix.py
script/: download_from_sheets.py  execute_sqlalchemy_queries.py  execute_sqlite_queries.py  fix_financials.py  generate_sqlalchemy_models.py  key_check.py  sort_cls_test_class.py  upload_to_sheets.py  vacuum_sqlite_database.py
scripts/: analyze_spreadsheet.py  bootstrap.py  download_from_sheets.py  download_sheets_to_sqlite.py  execute_sqlalchemy_queries.py  execute_sqlite_queries.py  first_normal_form.py  fix_financials.py  generate_reports.py  generate_sqlalchemy_models.py  generate_stubs.py  key_check.py  sort_class_methods.py  upload_to_sheets.py  vacuum_sqlite_database.py
sheets/: get_account_sheet_names.gs  get_all_sheet_names.gs
sql/: 2025-01 by bank account.sql  Summary (interest).sql  monthly_summary.sql  monzo-description-mismatches.sql  summary_by_bank_account.sql  summary_interest.sql  xfers by key.sql
src/: README.md
src/finances/: __main__.py  loader.py
src/finances/classes/: config.py  date_time_helper.py  decimal_helper.py  exception_helper.py  file_helper.py  gbp.py  google_helper.py  hmrc.py  hmrc_calculation.py  hmrc_category.py  hmrc_income.py  hmrc_output.py  hmrc_people.py  log_helper.py  method_sorter.py  os_helper.py  our_finances.py  pandas_helper.py  percentage.py  query_builder.py  rounding.py  spreadsheet_analyzer.py  spreadsheet_field.py  spreadsheet_to_sqlite.py  sql_helper.py  sqlalchemy_helper.py  sqlalchemy_table.py  sqlite_helper.py  sqlite_table.py  table_bank_accounts.py  table_categories.py  table_hmrc_businesses.py  table_hmrc_constant_amounts_by_year.py  table_hmrc_constant_percentages_by_year.py  table_hmrc_constants_by_year.py  table_hmrc_overrides_by_year.py  table_hmrc_people_details.py  table_hmrc_property.py  table_hmrc_questions_by_year.py  table_people.py  (+1 more)
src/finances/classes/hmrc/: __init__.py  booleans.py  core.py  income.py  person.py  tax.py
src/finances/classes/sqlite_table/: hmrc_businesses.py  hmrc_constant_amounts_by_year.py  hmrc_constant_percentages_by_year.py  hmrc_constants_by_year.py  hmrc_overrides_by_year.py  hmrc_people_details.py  hmrc_property.py  hmrc_questions_by_year.py
src/finances/commands/: analyze_spreadsheet.py  create_reports.py  google_sheets_to_sqlite.py  key_check.py
src/finances/script/: account_tables.py
src/finances/util/: boolean_helpers.py  database_keys.py  date_helpers.py  financial_helpers.py  string_helpers.py
src/scripts/: __init__.py  analyze_spreadsheet.py  batch_process.py  convert_pdf_to_csv.py  download_sheets_to_sqlite.py  execute_sqlalchemy_queries.py  execute_sqlite_queries.py  first_normal_form.py  fix_financials.py  fownes_street.py  generate_reports.py  key_check.py  sort_class_methods.py  ssacrd_pdf_to_csv.py  ssacrd_pdfs_to_xlsx.py  vacuum_sqlite_database.py
tests/: test_attributes.py  test_categories.py  test_class.py  test_command_line_input.py  test_config.py  test_date_time.py  test_decimal.py  test_hmrc_booleans.py  test_hmrc_people_details.py  test_log_helper.py  test_right_align.py  test_sqlalchemy.py  test_sqlalchemy_helper.py  test_utility_functions.py
typings/sqlparse/: __init__.pyi
