[project]
name = "our-finances"
version = "0.0.1" #Major, minor, patch
description = "Family accounts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-auth",
  "gspread",
  "jinja2",
  "libcst",
  "pandas",
  "pytest",
  "pyyaml",
  "sqlalchemy",
  "sqlparse",
  "types-PyYAML",
]

[project.optional-dependencies]
dev = ["ipython", "mypy", "pandas-stubs", "pytest", "ruff"]

[project.scripts]
# CLI tools: maps `hatch run my-tool` or installs as entry points
analyze-spreadsheet = "scripts.analyze_spreadsheet:main"
download-sheets-to-sqlite = "scripts.download_sheets_to_sqlite:main"
generate-reports = "scripts.generate_reports:main"
key-check = "scripts.key_check:main"
first-normal-form = "scripts.first_normal_form:main"
vacuum-sqlite-database = "scripts.vacuum_sqlite_database:main"
execute-sqlite-queries = "scripts.execute_sqlite_queries:main"
execute-sqlalchemy-queries = "scripts.execute_sqlalchemy_queries:main"
generate-sqlalchemy-models = "scripts.generate_sqlalchemy_models:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/**", "tests/**", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/finances", "src/scripts", "tests"]

[tool.hatch.envs.default]
dependencies = [
  # Just core dependencies here if needed
]

[tool.hatch.envs.default.scripts]
format = "hatch run dev:format"
lint = "hatch run dev:lint"
pre_commit_check = "hatch run dev:pre_commit_check"
run_queries = "hatch run dev:run_queries"
run_tests = "hatch run dev:run_tests"

[tool.hatch.envs.dev]
dependencies = [":dev"] # Use list from [project.optional-dependencies].dev

# Optional: set dev env as default for commands like `hatch run`
[tool.hatch.envs.dev.scripts]
format = "hatch run ruff format ."
lint = ["ruff check .", "mypy src"] # lint + check types
pre_commit_check = ["hatch run dev:lint", "hatch run dev:run_tests"]
run_queries = "execute_sqlite_queries \"$FILE\""
run_tests = "pytest --maxfail=1 --disable-warnings -q"

[tool.mypy]
python_version = "3.12"
mypy_path = "src:typings"

[tool.ruff]
extend-select = ["I"]
line-length = 88
src = ["src", "scripts"]
extend-exclude = ["tests/data", "scripts/old"]
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN401", "E402"]
fixable = ["ALL"]
