[project]
name = "our-finances"
version = "0.0.1"
description = "Family accounts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beartype",
  "google-auth",
  "gspread",
  "jinja2",
  "libcst",
  "pandas",
  "pdfplumber",
  "python-dateutil",
  "pyyaml",
  "sqlalchemy",
  "sqlparse",
  "types-PyYAML",
]

[project.optional-dependencies]
all = [
  "ipython",
  "mypy>=1.10",
  "pandas-stubs",
  "ruff>=0.5.0",
  "types-python-dateutil",
  "pytest",
]

[project.scripts]
analyze-spreadsheet = "scripts.analyze_spreadsheet:main"
convert-pdf-to-csv = "scripts.convert_pdf_to_csv:main"
download-sheets-to-sqlite = "scripts.download_sheets_to_sqlite:main"
fownes-street = "scripts.fownes_street:main"
generate-reports = "scripts.generate_reports:main"
key-check = "scripts.key_check:main"
first-normal-form = "scripts.first_normal_form:main"
vacuum-sqlite-database = "scripts.vacuum_sqlite_database:main"
execute-sqlite-queries = "scripts.execute_sqlite_queries:main"
execute-sqlalchemy-queries = "scripts.execute_sqlalchemy_queries:main"
generate-sqlalchemy-models = "scripts.generate_sqlalchemy_models:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/**", "tests/**", "README.md"]

[tool.hatch.build.targets.wheel]
# Prefer src-layout discovery instead of listing tests as a package in the wheel
packages = ["src/finances", "src/scripts"]


[tool.hatch.envs.default]
features = ["all"]
type = "virtual"

[tool.hatch.envs.default.scripts]
# IMPORTANT: don't nest 'hatch run ...' here — just run the tools
format = "ruff format ."
lint = ["ruff check .", "mypy --config-file pyproject.toml src"]
typecheck = "mypy --config-file pyproject.toml ."
pre_commit_check = [
  "ruff format .",
  "ruff check .",
  "mypy --config-file pyproject.toml src",
  "pytest --maxfail=1 --disable-warnings -q",
]
run_tests = "pytest --maxfail=1 --disable-warnings -q"
run_queries = "execute_sqlite_queries \"$FILE\""

[tool.mypy]
python_version = "3.12"
mypy_path = "src:typings"
strict = true
install_types = true
non_interactive = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88
src = ["src"]
extend-exclude = ["tests/data", "scripts/old"]
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
extend-select = ["I"]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN401", "E402"]
fixable = ["ALL"]
